--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -1,8 +1,8 @@
-name: run main.py
+name: run scrapy shopee
 
 on:
   schedule:
-    - cron: '0 0 * * *' # At 00:00 everyday
+    - cron: '*/5 * * * *' # At every 5 minutes
 
 jobs:
   build:
@@ -16,12 +16,21 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11' # install the python version needed
-          
+
+      - name: Set up virtual environment
+        run: python -m venv venv
+
+      - name: Activate virtual environment
+        run: source venv/bin/activate
+        
       - name: install python packages
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-          
+
+      - name: Navigate to the spider directory
+        run: cd ShopeeCrawler/spiders
+        
       - name: execute py script # run main.py
         run: |
           echo "TODAY=$(date +%y-%m-%d)" >> $GITHUB_ENV
