--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -30,6 +30,9 @@ jobs:
 
       - name: Navigate to the spider directory
         run: cd ShopeeCrawler/spiders
+
+      - name: print ls
+        run: ls
         
       - name: execute py script # run main.py
         run: |
