--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -45,5 +45,6 @@ jobs:
           git config --global user.name "TTAT91A"
           git add data/
           git commit -m "Add data file for $TODAY"
-          git push
+          git push origin main
+
           
