--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,15 +27,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-
-      - name: Navigate to the spider directory
-        run: cd ShopeeCrawler/spiders
-
-      - name: print ls
-        run: ls
         
       - name: execute py script # run main.py
         run: |
+          cd ShopeeCrawler/spiders
           echo "TODAY=$(date +%y-%m-%d)" >> $GITHUB_ENV
           scrapy crawl shopee -o $GITHUB_WORKSPACE/data/$TODAY.json -t json
 
