--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -27,17 +27,20 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
-        
+
+      - name: get date
+        run: |
+          echo "TODAY=$(date +%y-%m-%d)" >> $GITHUB_ENV
+          echo $TODAY
+      
       - name: execute py script # run main.py
         run: |
           cd ShopeeCrawler/spiders
           echo "TODAY=$(date +%y-%m-%d)" >> $GITHUB_ENV
           scrapy crawl shopee -o $GITHUB_WORKSPACE/data/$TODAY.json -t json
-          dir
-
+    
       - name: Commit and push data
         run: |
-          ls
           git config --global user.email "anhtuan.ltqb@gmail.com"
           git config --global user.name "TTAT91A"
           git add data/
