--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -2,7 +2,7 @@ name: run scrapy shopee
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # At every 5 minutes
+    - cron: '0 0 * * *' # At every 5 minutes
 
 jobs:
   build:
